--- a/firebase.json
+++ b/firebase.json
@@ -1,13 +1,10 @@
 {
   "hosting": {
-    "source": "hosting",
+    "public": "public",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ],
-    "frameworksBackend": {
-      "region": "us-central1"
-    }
+    ]
   }
 }
